Clean up DCHECKs in MediaStreamAudioProcessor

In http://crrev/2699113002, MediaStreamAudioProcessor was made to
always register itself as a WebRtcPlayoutDataSource::Sink in
AudioDeviceImpl, independently of doing echo cancellation or
not. DCHECKs were left in MediaStreamAudioProcessor::OnPlayoutData
that checked that echo cancellation was active. That is an invalid
assumption, because we always want to register the
MediaStreamAudioProcessor and run audio through
webrtc::AudioProcessingModule (which has other functionality but echo
cancellation, e.g. noise suppression or echo detection). The
assumption that echo cancellation is active is not used anywhere else
in the code.

This CL removes these DCHECKs.

BUG=702441

Review-Url: https://codereview.chromium.org/2932063002
Cr-Commit-Position: refs/heads/master@{#478241}

Former-commit-id: 0729944af28ece2d2a2c215de01ecc2dba29a7e3